--- a/assets/pokeCard.css
+++ b/assets/pokeCard.css
@@ -69,3 +69,16 @@
 .change-poke:hover {
   background-color: greenyellow;
 }
+
+.error-card {
+  background-color: lightcoral;
+  width: 800px;
+  height: 600px;
+  border-radius: 25px;
+}
+
+.error-label {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 1.8em;
+  padding: 3em;
+}
