--- a/assets/pokeCard.css
+++ b/assets/pokeCard.css
@@ -64,6 +64,8 @@
   
   border: solid 3px black;
   border-radius: 20px;
+
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 .change-poke:hover {
