--- a/assets/nav.css
+++ b/assets/nav.css
@@ -1,17 +1,20 @@
 .nav {
   width: 800px;
   margin: auto;
-  width: 70%;
 }
 
 .link {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-  
-  margin: 0.5em 3em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;  
+  margin: 0.5em 3em 0 0;
 }
 
-.link input {
-  margin-right: 0em !important;
+.link:hover, .search-btn {
+  cursor: pointer;
+}
+
+.link + input {
+  margin-right: 1em;
+  cursor: text !important;
 }
 
 .search-btn {
