--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,3 @@
-table, th, td {
-  border:1px solid black;
-}
-
 .float-right {
   float: right;
 }
@@ -10,4 +6,36 @@ table, th, td {
   margin: auto;
   width: 50%;
   text-align: center;
+}
+
+.index {
+  width: 800px;
+  border-radius: 25px;
+  background-color: pink;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+.title {
+  font-size: 2.5em;
+  padding-top: 0.6em;
+}
+
+.poke-row {
+  background-color: violet;
+  margin: 2em 2em 0 2em;
+  height: 8em;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+.poke-row img {
+  float: left;
+  margin-left: 2em;
+  height: 8em;
+}
+
+.poke-name {
+  font-size: 1.8em;
+  padding-top: 1.5em;
 }
