--- a/assets/style.css
+++ b/assets/style.css
@@ -13,7 +13,7 @@
   border-radius: 25px;
   background-color: pink;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
-
+  padding-bottom: 2em;
 }
 
 #filter {
